Alert-for-buyer

--- a/views/buyerProfile.ejs
+++ b/views/buyerProfile.ejs
@@ -2,7 +2,7 @@
 
 <body id="page-top">
     <h2 class=" masthead mt-5 mb-0 page-section-heading text-center text-uppercase text-secondary">Hi! <%= user.username %></h2>
-
+    <% include ./partials/messages %>
     <div class="container">
         <div class="row">
             <div class="card mb-3" style="max-width: 580px;">
