--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -10,12 +10,15 @@
                 <!--Grid column-->
                 <div class="col-lg-8">
                     <% var totalPrice = 0; %>
-                    <% orderObj.forEach( function(order) { %>              
+                    <% var count = 0; %>
+                    <% orderObj.forEach( function(order) { %>    
+                        <% if (!order.delivered) {%>        
+                        <% count += 1 %> 
                     <!-- Card -->
                     <div class="mb-3">
                         <div class="pt-4 wish-list">
 
-                            <h5 class="mb-4">Cart (<span><%= orderObj.length %></span> items)</h5>
+                            
 
                             <div class="row mb-4">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
@@ -59,8 +62,10 @@
 
                         </div>
                     </div>
-                    `   <% totalPrice = totalPrice + (order.product.price * order.amount) %>
+                       <% totalPrice = totalPrice + (order.product.price * order.amount) %>
+                        <% } %>
                     <% }) %>
+                                            <h5 class="mb-4">Cart (<span><%= count %></span> items)</h5>    
                     
                     <!-- Card -->
 
