--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -1,9 +1,9 @@
 <% include partials/nav %>
 <html>
 <body>
-    <h2 class=" masthead mt-5 mb-0 pb-5 page-section-heading text-center text-secondary">Edit/Delete Items</h2>
+    <h2 class=" masthead mt-5 mb-0 pb-5 page-section-heading text-center text-secondary">Edit Items</h2>
     <div class="container">
-        <form method="POST" action="/products/update/<%= productitem._id %>"  enctype="multipart/form-data">
+        <form method="POST" action="/products/update/<%= productItem._id %>"  enctype="multipart/form-data">
             <div class="form-group">
                 <label for="productName">Product Name:</label>
                 <input type="string" class="form-control" id="productName" name="productName" placeholder="Enter product name" value="<%= productItem.name %>">
