--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label for="img">Image:</label>
-                <input type="file" name="myImage">
+                <input type="file"  class="form-control" id="img" name="myImage" multiple>
             </div>
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary mr-2" name="action">Submit</button>
