--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -1,29 +1,37 @@
 <% include partials/nav %>
 <body>
-    <h2 class=" masthead mt-5 mb-0 pb-5 page-section-heading text-center text-secondary">Edit/Delete Items</h2>
+    <h2 class=" masthead mt-5 mb-0 pb-5 page-section-heading text-center text-secondary">Edit Items</h2>
     <div class="container">
         <form method="POST" action="/products/update/<%=productitem._id%>">
             <div class="form-group">
-                <label for="title">Product Name:</label>
-                <input type="string" class="form-control" id="title" name="title" placeholder="Enter title" value="">
+                <label for="productName">Product Name:</label>
+                <input type="string" class="form-control" id="productName" name="name" placeholder="Enter product name" value="">
             </div>
             <div class="form-group">
                 <label for="category">Category:</label>
-                <input type="string" class="form-control" id="category" name="category" placeholder="Category" value=" ">
+                <input type="string" class="form-control" id="category" name="category" placeholder="Category" value="">
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <input type="string" class="form-control" id="description" name="description" placeholder="Enter description" value=" ">
+                <input type="string" class="form-control" id="description" name="description" placeholder="Enter description" value="">
             </div>
             <div class="form-group">
-                <label for="sth">Idon't know:</label>
-                <input type="string" class="form-control" id="sth" name="sth" placeholder="sth" value=" ">
+                <label for="stock">Stock:</label>
+                <input type="number" class="form-control" id="stock" name="stock" placeholder="Stock" value="">
             </div>
+            <div class="form-group">
+                <label for="price">Price:</label>
+                <input type="number" class="form-control" id="price" name="price" placeholder="Enter price" value="">
+            </div>
+           <!--- <div class="form-group">
+                <label for="img">Image:</label>
+                <input type="file" class="form-control" id="img" name="img" >
+            </div>-->
             <div class="mb-3">
-                <button type="submit " class="btn btn-primary mr-2" name="action">Submit</button>
-                
+                <button type="submit" class="btn btn-primary mr-2" name="action">Submit</button>
+                <button type="button" class="btn btn-danger " name="action">Delete</button>
             </div>
-        </form>
+        </form>    
 </body>
 
 </html>
