--- a/views/farmerProfile.ejs
+++ b/views/farmerProfile.ejs
@@ -37,7 +37,7 @@
                         href="/products/addItem">Add</a></button>
 
                 <button type="button" class="btn btn-success col-md-3 mr-5">Order</button><br>
-                <% if (currentUser) { %>
+                <!---- <% if (currentUser) { %>
 
                 <button> <a class="nav-link px-0  rounded js-scroll-trigger" href="/users/logout"> Log out</a></button>
 
@@ -49,7 +49,7 @@
 
 
                 <% }
-                          %>
+                          %>-->
 
 
             </div>
@@ -65,13 +65,16 @@
                 <div class="row">
                     <% obj.forEach(function(product,i) {%>
                     <div class="col-auto mb-3 col-md-3" style="width: 22rem;">
-                        <img class="card-img-top" src="<%= product.img %>" alt="Card image cap">
+                        <!--- <img class="card-img-top" src="<%= product.img %>" alt="Card image cap"> -->
 
                         <div class="card-body">
-                            <h5 class="card-title"><%= product.productName %></h5>
+                            <img src="<%= product.img %>" class="card-img-top"  alt="Card image cap">
+                            <h5><p class="card-title"><%= product.name %></p></h5>
                             <p class="card-text"><%= product.description %>
                             </p>
-                            <p class="card-text">Stock : <%= product.stock %>
+                            <p class="card-text">Stock : <%= product.stock %></p>
+                            <p class="card-text">Category: <%= product.category %></p>
+
 
                         </div>
                         <button type="button" class="btn btn-secondary "><a
