--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -66,7 +66,7 @@
                     </li>
 
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link px-0  rounded js-scroll-trigger" href="./about">
+                        <a class="nav-link px-0  rounded js-scroll-trigger" href="/about">
                             <h5>ABOUT</h5>
                         </a>
                     </li>
