--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -30,7 +30,7 @@
             </div>
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary mr-2" name="action">Submit</button>
-                <button type="button" class="btn btn-danger " name="action">Delete</button>
+                <button type="button" class="btn btn-danger " name="action"><a href="/users/farmerProfile">Cancel</a></button>
             </div>
         </form>
         </div>
