--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -65,7 +65,7 @@
                        <% totalPrice = totalPrice + (order.product.price * order.amount) %>
                         <% } %>
                     <% }) %>
-                                            <h5 class="mb-4">Cart (<span><%= count %></span> items)</h5>    
+                    <h5 class="mb-4">Total Items: <span><%= count %></span> </h5>    
                     
                     <!-- Card -->
 
