--- a/views/buyerProfile.ejs
+++ b/views/buyerProfile.ejs
@@ -8,7 +8,7 @@
             <div class="card mb-3" style="max-width: 580px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img class="bd-placeholder-img " width="100%" height="250" src="/images/rice.jpg"
+                        <img class="bd-placeholder-img " width="100%" height="250" src="/images/buyer.png"
                             preserveAspectRatio="xMidYMid slice" role="img">
                         <title>Placeholder</title>
                     </div>
@@ -26,10 +26,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="=card mo-3">
-                <h2>Cart</h2>
-                <h5>Product Name :  </h5>
             </div>
         </div>
         <% if(user.action === "buy") {%>
