--- a/views/farmerProfile.ejs
+++ b/views/farmerProfile.ejs
@@ -2,13 +2,20 @@
 
 <body id="page-top">
     <h2 class=" masthead mt-5 mb-0 page-section-heading text-center text-uppercase text-secondary">Farmer Profile</h2>
-    <% include partials/messages %>
+    <% if(message.length > 0){ %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <%= message %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+    <% } %>
     <div class="container">
         <div class="row">
             <div class="card mb-3" style="max-width: 580px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img class="bd-placeholder-img " width="100%" height="250" src="/images/rice.jpg"
+                        <img class="bd-placeholder-img " width="100%" height="200" src="/images/default.png"
                             preserveAspectRatio="xMidYMid slice" role="img">
                         <title>Placeholder</title>
                     </div>
@@ -21,21 +28,21 @@
                             <h6 class="d-inline-block pr-2">Contact: </h6><a href="#"><%= user.mobilenumber %></a><br>
                             <a href="#" class="ml-4 pl-5"><%= user.email %></a><br>
                             <a href="#" class="ml-5 pl-4">facebook.com/sumibhatta1</a><br><br>
-                            <p class="card-text"><small class="text-muted"><%= user.action %></small></p>
+                            <p class="card-text"><small class="text-muted">Location : <%= user.address %></small></p>
+                            
 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <% if (currentUser.action == "sell" ) {%>
+        <% if (emailFlag) {%>
         <div class="container col-md-12 ml-5 mt-5 mb-5">
             <div class="row">
-                <button type="button" class="btn btn-primary col-md-3 mr-5 p-3">Message</button>
                 <button type="button" class="btn btn-secondary col-md-3 mr-5"><a
-                        href="/products/addItem">Add</a></button>
+                        href="/products/addItem">Add Product</a></button>
                 
-                <button type="button" class="btn btn-success col-md-3 mr-5">Order</button>
+                <button type="button" class="btn btn-success col-md-3 mr-5">Check Your Orders</button>
             </div>
         </div>
         <% } %>
@@ -56,14 +63,14 @@
                             <p class="card-text"><%= product.description %>
                             </p>
                             <p class="card-text">Stock : <%= product.stock %>
-                               
+                            <a href="/products/item/<%= product.id%>" class="stretched-link ">See More</a>
                         </div>
-                        <% if (currentUser.action == "sell" ) {%>
+                        
                         <button type="button" class="btn btn-secondary "><a
                             href="/products/editItem/<%= product._id %>">Edit</a></button>
                             <button type="button" class="btn btn-secondary ">
                                 <a href="/products/remove/<%= product._id %>" class="card-link">Delete</a></button>   
-                        <% } %>
+                        
                     </div>
                      
                   
