UI fix reeti-branch

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,6 +182,10 @@ a {
     background-color: transparent;
 }
 
+button>a {
+    color: white;
+}
+
 a:hover {
     color: #117964;
     text-decoration: underline;
@@ -10207,8 +10211,8 @@ a.text-dark:focus {
 
 @media (min-width: 992px) {
     #mainNav {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
+        padding-top: 1rem;
+        /* padding-bottom: 1.5rem; */
         transition: padding-top 0.3s, padding-bottom 0.3s;
     }
     #mainNav .navbar-brand {
