--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -70,6 +70,11 @@
                             <h5>ABOUT</h5>
                         </a>
                     </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link px-0  rounded js-scroll-trigger" href="/users/profile">
+                            <h5>PROFILE</h5>
+                        </a>
+                    </li>
                 </ul>
 
             </div>
